tests/ui/suggestions/suggest-collect.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-collect.rs:2:22
   |
LL |     let _x: String = "hello".chars().map(|c| c);
   |             ------   ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `Map<Chars<'_>, {closure@...}>`
   |             |
   |             expected due to this
   |
   = note: expected struct `String`
              found struct `Map<Chars<'_>, {closure@$DIR/suggest-collect.rs:2:42: 2:45}>`
help: consider using `.collect()` to convert the `Iterator` into a `String`
   |
LL |     let _x: String = "hello".chars().map(|c| c).collect();
   |                                                ++++++++++

error[E0308]: mismatched types
  --> $DIR/suggest-collect.rs:6:24
   |
LL |     let _y: Vec<i32> = vec![1, 2, 3].into_iter().map(|x| x);
   |             --------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<i32>`, found `Map<IntoIter<{integer}>, {closure@...}>`
   |             |
   |             expected due to this
   |
   = note: expected struct `Vec<i32>`
              found struct `Map<std::vec::IntoIter<{integer}>, {closure@$DIR/suggest-collect.rs:6:54: 6:57}>`
help: consider using `.collect()` to convert the `Iterator` into a `Vec<i32>`
   |
LL |     let _y: Vec<i32> = vec![1, 2, 3].into_iter().map(|x| x).collect();
   |                                                            ++++++++++

error[E0308]: mismatched types
  --> $DIR/suggest-collect.rs:10:36
   |
LL |     let res: Result<Vec<i32>, _> = ["1", "2"].into_iter().map(|s| s.parse::<i32>());
   |              -------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Vec<i32>, _>`, found `Map<Iter<'_, &str>, {closure@...}>`
   |              |
   |              expected due to this
   |
   = note: expected enum `Result<Vec<i32>, _>`
            found struct `Map<std::slice::Iter<'_, &str>, {closure@$DIR/suggest-collect.rs:10:63: 10:66}>`
help: consider using `.collect()` to convert the `Iterator` into a `Result<Vec<i32>, _>`
   |
LL |     let res: Result<Vec<i32>, _> = ["1", "2"].into_iter().map(|s| s.parse::<i32>()).collect();
   |                                                                                    ++++++++++

error[E0308]: mismatched types
  --> $DIR/suggest-collect.rs:13:40
   |
LL |     let (a, b): (Vec<i32>, Vec<i32>) = vec![1, 2].into_iter().map(|x| (x, x));
   |                 --------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(Vec<i32>, Vec<i32>)`, found `Map<IntoIter<{integer}>, {closure@...}>`
   |                 |
   |                 expected due to this
   |
   = note: expected tuple `(Vec<i32>, Vec<i32>)`
             found struct `Map<std::vec::IntoIter<{integer}>, {closure@$DIR/suggest-collect.rs:13:67: 13:70}>`
help: consider using `.collect()` to convert the `Iterator` into a `(Vec<i32>, Vec<i32>)`
   |
LL |     let (a, b): (Vec<i32>, Vec<i32>) = vec![1, 2].into_iter().map(|x| (x, x)).collect();
   |                                                                              ++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
